tests/cases/ffi/errors/extern-varargs-function-pointer.ari
extern "C" fn printf(format: ptr c_char, ...) -> c_int;

fn main() -> i64 {
  let printer = printf;
  return 0;
}
